--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin: 0;
+    padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.buttons{
+    text-align: center;
+    margin-top: 50px;
+    
+}
+
+.buto{
+    border-radius: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+   
+    padding-top: 7px;
+    padding-bottom: 5px;
+    border: none;
+    background-color: rgb(127, 232, 234);
+}
+
+.soz{
+    text-align: center;
+    margin-top: 30px;
 }
